# nn1

./: CMakeLists.txt  README.md  main.cpp
mnist/: mnist_reader.cpp  mnist_reader.h
nn/inc/: layer.h  network.h  util.h
nn/src/: layer.cpp  network.cpp
